src/objects/Addendum_Program_Contracts__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addendum / Program Contracts</relationshipLabel>
        <relationshipName>Addendum_Program_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Overall T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overall T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Document_Name__c</fullName>
        <label>Legal Document Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Link_Formula__c</fullName>
        <formula>HYPERLINK(PDF_Link__c , &quot;PDF Link&quot;)</formula>
        <label>PDF Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <label>PDF Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipLabel>Addendum / Program Contracts</relationshipLabel>
        <relationshipName>Addendum_Program_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <referenceTo>Partner_Program__c</referenceTo>
        <relationshipLabel>Addendum / Program Contracts</relationshipLabel>
        <relationshipName>Addendum_Program_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort_Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Addendum / Program Contract</label>
    <nameField>
        <label>Addendum / Program Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addendum / Program Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>